class, function call

--- a/antlr/pom.xml
+++ b/antlr/pom.xml
@@ -23,6 +23,10 @@
                         <goals>
                             <goal>antlr4</goal>
                         </goals>
+                        <configuration>
+                            <visitor>true</visitor>
+                            <listener>false</listener>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
